--- a/src/app/cam_alarm/cam_alarm.html
+++ b/src/app/cam_alarm/cam_alarm.html
@@ -1,10 +1,10 @@
 <div class="dialog-wrapper">
-  <new-spot
+  <cam-alarm
     *ngIf="editMode; else viewModeTemplate"
     [edit]="true"
     [spotData]="data.spot"
     [spotId]="data.spotId"
-  ></new-spot>
+  ></cam-alarm>
   <ng-template #viewModeTemplate>
     <div class="spot-content">
       <div class="spot-title-wrapper">
