--- a/src/app/cam_alarm/cam_alarm.html
+++ b/src/app/cam_alarm/cam_alarm.html
@@ -43,7 +43,7 @@
         </button>
 
         <button
-          *ngIf="currentImageIndex < data.url - 1"
+          *ngIf="currentImageIndex < 1"
           class="next-img-button image-buttons"
           mat-icon-button
           (pointerdown)="$event.stopPropagation()"
