--- a/src/app/cam_alarm/cam_alarm.html
+++ b/src/app/cam_alarm/cam_alarm.html
@@ -27,7 +27,7 @@
         <div
           class="image-wrapper"
           [class.dragging]="imagePointerStartPos"
-          [style.transform]="getImageTransform(i)"
+          [style.transform]="getImageTransform(1)"
         >
           <img [src]="data.url" />
         </div>
