--- a/src/app/cam_alarm/cam_alarm.html
+++ b/src/app/cam_alarm/cam_alarm.html
@@ -7,7 +7,7 @@
     <div class="spot-content">
       <div class="spot-title-wrapper">
         <div class="spot-name">
-          {{data.url}}&nbsp;
+          Movimento Detecatado&nbsp;
         </div>
       </div>
 
